[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/visuals/AnimatedDecal.gd" type="Script" id=1]
[ext_resource path="res://scenes/visuals/DecalArea.tscn" type="PackedScene" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Animated_Decal" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
animation_name = "default"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )

[node name="Decal" parent="." instance=ExtResource( 2 )]

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="interacted" from="Decal" to="." method="_on_Decal_interacted"]
[connection signal="mesh_ready" from="Decal" to="." method="_on_Decal_mesh_ready"]
